--- a/Hearthscience.Rmd
+++ b/Hearthscience.Rmd
@@ -616,7 +616,7 @@ minions_text %>%
 
 It might be a good idea to filter out these cards.
 ```{r, warning=F, error=F}
-minions_text = minions_text %>% filter(cost <= 10)
+minions_text = minions_text %>% mutate(attplusheal = attack+health) %>% filter(cost <= 10)
 
 ## cost vs attack+health:
 minions_text %>% mutate(attplusheal = attack+health) %>% 
@@ -906,7 +906,7 @@ rmse_results
 
 
 ```{r}
-fitCL = vglm(cbind(Y1, Y2, Y3, Y4, Y5, Y6, Y7) ~ health + attack + Charge + Divine_Shield + Taunt, cumulative(parallel = T, reverse = F), data = minions_text)
+fitCL = vglm(cbind(Y1, Y2, Y3, Y4, Y5, Y6, Y7) ~ health + attack + Charge + Divine_Shield + Taunt, cumulative(parallel = T, reverse = F), data = minions_text1)
 summary(fitCL)
 
 for(i in 1: 6){
